Fix a bunch of issues reported by Sonar and IntelliJ