@@ -2,22 +2,21 @@ package de.prob2.ui.menu;
 
 import java.io.File;
 import java.io.IOException;
-import java.net.URL;
 import java.util.Optional;
-
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import com.google.inject.Inject;
 import com.google.inject.Injector;
 import com.google.inject.Singleton;
 
 import de.be4.classicalb.core.parser.exceptions.BException;
+
 import de.codecentric.centerdevice.MenuToolkit;
+
 import de.prob.scripting.Api;
 import de.prob.statespace.AnimationSelector;
 import de.prob.statespace.StateSpace;
 import de.prob.statespace.Trace;
+
 import de.prob2.ui.dotty.DottyStage;
 import de.prob2.ui.formula.FormulaGenerator;
 import de.prob2.ui.groovy.GroovyConsoleStage;
@@ -25,11 +24,11 @@ import de.prob2.ui.modelchecking.ModelcheckingController;
 import de.prob2.ui.preferences.PreferencesStage;
 import de.prob2.ui.prob2fx.CurrentStage;
 import de.prob2.ui.prob2fx.CurrentTrace;
+
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Parent;
-import javafx.scene.Scene;
 import javafx.scene.control.Alert;
 import javafx.scene.control.Menu;
 import javafx.scene.control.MenuBar;
@@ -40,6 +39,9 @@ import javafx.scene.input.KeyCombination;
 import javafx.stage.FileChooser;
 import javafx.stage.Stage;
 import javafx.stage.Window;
+
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 @Singleton
 public final class MenuController extends MenuBar {
@@ -57,16 +59,72 @@ public final class MenuController extends MenuBar {
 
 	private Window window;
 
-	@FXML
-	private Menu windowMenu;
-	@FXML
-	private MenuItem preferencesItem;
-	@FXML
-	private MenuItem enterFormulaForVisualization;
-	@FXML
-	private MenuItem aboutItem;
+	@FXML private Menu windowMenu;
+	@FXML private MenuItem preferencesItem;
+	@FXML private MenuItem enterFormulaForVisualization;
+	@FXML private MenuItem aboutItem;
 
 	private Logger logger = LoggerFactory.getLogger(MenuController.class);
+	
+	@Inject
+	private MenuController(final FXMLLoader loader,
+		
+		final Injector injector, final Api api, final AnimationSelector animationSelector, final CurrentStage currentStage,
+		final CurrentTrace currentTrace, final FormulaGenerator formulaGenerator,
+		final ModelcheckingController modelcheckingController,
+		
+		final DottyStage dottyStage, final GroovyConsoleStage groovyConsoleStage, final PreferencesStage preferencesStage) {
+		this.injector = injector;
+		this.api = api;
+		this.animationSelector = animationSelector;
+		this.currentStage = currentStage;
+		this.currentTrace = currentTrace;
+		this.formulaGenerator = formulaGenerator;
+		this.modelcheckingController = modelcheckingController;
+		this.dottyStage = dottyStage;
+		this.groovyConsoleStage = groovyConsoleStage;
+		this.preferencesStage = preferencesStage;
+		
+		loader.setLocation(getClass().getResource("menu.fxml"));
+		loader.setRoot(this);
+		loader.setController(this);
+		try {
+			loader.load();
+		} catch (IOException e) {
+			logger.error("loading fxml failed", e);
+		}
+		
+		if (System.getProperty("os.name", "").toLowerCase().contains("mac")) {
+			// Mac-specific menu stuff
+			this.setUseSystemMenuBar(true);
+			final MenuToolkit tk = MenuToolkit.toolkit();
+			
+			// Remove About menu item from Help
+			aboutItem.getParentMenu().getItems().remove(aboutItem);
+			aboutItem.setText("About ProB 2");
+			
+			// Remove Preferences menu item from Edit
+			preferencesItem.getParentMenu().getItems().remove(preferencesItem);
+			preferencesItem.setAccelerator(KeyCombination.valueOf("Shortcut+,"));
+			
+			// Create Mac-style application menu
+			final Menu applicationMenu = tk.createDefaultApplicationMenu("ProB 2");
+			this.getMenus().add(0, applicationMenu);
+			tk.setApplicationMenu(applicationMenu);
+			applicationMenu.getItems().setAll(aboutItem, new SeparatorMenuItem(), preferencesItem,
+				new SeparatorMenuItem(), tk.createHideMenuItem("ProB 2"), tk.createHideOthersMenuItem(),
+				tk.createUnhideAllMenuItem(), new SeparatorMenuItem(), tk.createQuitMenuItem("ProB 2"));
+			
+			// Add Mac-style items to Window menu
+			windowMenu.getItems().addAll(tk.createMinimizeMenuItem(), tk.createZoomMenuItem(),
+				tk.createCycleWindowsItem(), new SeparatorMenuItem(), tk.createBringAllToFrontItem(),
+				new SeparatorMenuItem());
+			tk.autoAddWindowMenuItems(windowMenu);
+			
+			// Make this the global menu bar
+			tk.setGlobalMenuBar(this);
+		}
+	}
 
 	@FXML
 	private void handleLoadDefault() {
@@ -92,7 +150,7 @@ public final class MenuController extends MenuBar {
 		if (selectedFile != null) {
 			try {
 				FXMLLoader loader = injector.getInstance(FXMLLoader.class);
-				loader.setLocation(new URL("file://" + selectedFile.getPath()));
+				loader.setLocation(selectedFile.toURI().toURL());
 				Parent root = loader.load();
 				window.getScene().setRoot(root);
 			} catch (IOException e) {
@@ -194,66 +252,6 @@ public final class MenuController extends MenuBar {
 
 		this.enterFormulaForVisualization.disableProperty()
 				.bind(currentTrace.currentStateProperty().initializedProperty().not());
-	}
-
-	@Inject
-	private MenuController(final FXMLLoader loader,
-
-	final Injector injector, final Api api, final AnimationSelector animationSelector, final CurrentStage currentStage,
-			final CurrentTrace currentTrace, final FormulaGenerator formulaGenerator,
-			final ModelcheckingController modelcheckingController,
-
-	final DottyStage dottyStage, final GroovyConsoleStage groovyConsoleStage, final PreferencesStage preferencesStage) {
-		this.injector = injector;
-		this.api = api;
-		this.animationSelector = animationSelector;
-		this.currentStage = currentStage;
-		this.currentTrace = currentTrace;
-		this.formulaGenerator = formulaGenerator;
-		this.modelcheckingController = modelcheckingController;
-		this.dottyStage = dottyStage;
-		this.groovyConsoleStage = groovyConsoleStage;
-		this.preferencesStage = preferencesStage;
-
-		loader.setLocation(getClass().getResource("menu.fxml"));
-		loader.setRoot(this);
-		loader.setController(this);
-		try {
-			loader.load();
-		} catch (IOException e) {
-			logger.error("loading fxml failed", e);
-		}
-
-		if (System.getProperty("os.name", "").toLowerCase().contains("mac")) {
-			// Mac-specific menu stuff
-			this.setUseSystemMenuBar(true);
-			final MenuToolkit tk = MenuToolkit.toolkit();
-
-			// Remove About menu item from Help
-			aboutItem.getParentMenu().getItems().remove(aboutItem);
-			aboutItem.setText("About ProB 2");
-
-			// Remove Preferences menu item from Edit
-			preferencesItem.getParentMenu().getItems().remove(preferencesItem);
-			preferencesItem.setAccelerator(KeyCombination.valueOf("Shortcut+,"));
-
-			// Create Mac-style application menu
-			final Menu applicationMenu = tk.createDefaultApplicationMenu("ProB 2");
-			this.getMenus().add(0, applicationMenu);
-			tk.setApplicationMenu(applicationMenu);
-			applicationMenu.getItems().setAll(aboutItem, new SeparatorMenuItem(), preferencesItem,
-					new SeparatorMenuItem(), tk.createHideMenuItem("ProB 2"), tk.createHideOthersMenuItem(),
-					tk.createUnhideAllMenuItem(), new SeparatorMenuItem(), tk.createQuitMenuItem("ProB 2"));
-
-			// Add Mac-style items to Window menu
-			windowMenu.getItems().addAll(tk.createMinimizeMenuItem(), tk.createZoomMenuItem(),
-					tk.createCycleWindowsItem(), new SeparatorMenuItem(), tk.createBringAllToFrontItem(),
-					new SeparatorMenuItem());
-			tk.autoAddWindowMenuItems(windowMenu);
-
-			// Make this the global menu bar
-			tk.setGlobalMenuBar(this);
-		}
 	}
 
 	private void loadPreset(String location) {
